1st version done

--- a/index.html
+++ b/index.html
@@ -59,14 +59,154 @@
         top: 23px;
         left: 1280px;
     }
-
+    .images_button{
+        position: absolute;
+        font-size: 110%;
+        color: black;
+        top: 30px;
+        left: 1210px;
+        text-decoration: none;
+    }
+    .gmail_button{
+        position: absolute;
+        font-size: 100%;
+        color: black;
+        top: 30px;
+        left: 1140px;
+        text-decoration: none;
+    }
+    .about_button{
+        position: absolute;
+        font-size: 100%;
+        color: black;
+        top: 30px;
+        left: 25px;
+        text-decoration: none;
+    }
+    .store_button{
+        position: absolute;
+        font-size: 100%;
+        color: black;
+        top: 30px;
+        left: 100px;
+        text-decoration: none;
+    }
+    a:hover{
+        text-decoration: underline;
+    }
+    .googleSearch_button{
+        position: absolute;
+        left: 40%;
+        top: 51%;
+        height: 35px;
+        width: 150px;
+        border: none;
+        color: grey;
+    }
+    .lucky_button{
+        position: absolute;
+        left: 54%;
+        top: 51%;
+        width: 150px;
+        height: 35px;
+        border: none;
+        color: grey;
+    }
+    .googleSearch_button:hover {
+        border: solid;
+        border-color: rgb(202, 200, 200);
+        border-width: 1px;
+        border-radius: 8%;
+        color: black;
+        cursor: pointer;
+    }
+    .lucky_button:hover{
+        border: solid;
+        border-color: rgb(202, 200, 200);
+        border-width: 1px;
+        border-radius: 8%;
+        color: black;
+        cursor: pointer;
+    }
+    .french {
+        position: absolute;
+        top: 57%;
+        left: 47%;
+    }
+    .separation{
+        position: absolute;
+        background-color: rgb(201, 199, 199);
+        width: 110%;
+        height: 1px;
+        bottom: 45px;
+    }
+    .footer {
+        position: absolute;
+        background-color:rgb(236, 235, 235);
+        width: 110%;
+        height: 90px;
+        bottom: 0%;
+        margin-left: -5%;
+        color: grey;
+    }
+    .canada {
+        position: relative;
+        color: grey;
+        top: -5%;
+        left: 6%;
+        font-size: 120%;
+    }
+    .advertising{
+        position: relative;
+        color: grey;
+        text-decoration: none;
+        left: 100px;
+    }
+    .business{
+        position: relative;
+        color: grey;
+        text-decoration: none;
+        left: 140px;
+    }
+    .hsw{
+        position: relative;
+        color: grey;
+        text-decoration: none;
+        left: 180px;
+    }
+    .privacy{
+        position: relative;
+        color: grey;
+        text-decoration: none;
+        left: 980px;
+    }
+    .terms{
+        position: relative;
+        color: grey;
+        text-decoration: none;
+        left: 1010px;
+    }
+    .settings{
+        position: relative;
+        color: grey;
+        text-decoration: none;
+        left: 1050px;
+    }
 
 </style>
 <header></header>
 <body>
-    <button class="signin_button">Sign in</button>
-    <img src="images/apps/1x/outline_apps_black_24dp.png" alt="app icon" class="app_icon">
-    <img src="images/googlelogo_color_272x92dp.png", alt="Google logo" class="center">
+    <div class="buttons">
+        <a href="https://about.google/?fg=1&utm_source=google-CA&utm_medium=referral&utm_campaign=hp-header" class="about_button">About</a>
+        <a href="https://store.google.com/CA/?utm_source=hp_header&utm_medium=google_ooo&utm_campaign=GS100042&hl=en-CA" class="store_button">Store</a>
+        <a href="https://www.google.com/imghp?hl=EN" class="images_button">Images</a>
+        <a href="https://mail.google.com/mail/u/0/#inbox" class="gmail_button">Gmail</a>
+        <button class="signin_button">Sign in</button>
+    </div>
+    <div>
+        <img src="images/apps/1x/outline_apps_black_24dp.png" alt="app icon" class="app_icon">
+        <img src="images/googlelogo_color_272x92dp.png", alt="Google logo" class="center">
+    </div>
     <br><br><br>
     <div class="wrapper">
         <form>
@@ -75,8 +215,26 @@
             <img src="images/mic/1x/outline_mic_black_24dp.png" alt="mic pic" class="mic-icon">
         </form>
     </div>
+    <div>
+        <button class="googleSearch_button">Google Search</button>
+        <button class="lucky_button">I'm Feeling Lucky</button>
+    </div>
+    <div class="french">
+        <p>Google offered in: <a href="https://www.google.com/" alt="french google">French</a></p>
+    </div>
 </body>
-<footer>
-
+<footer class="footer">
+    <div class="canada">
+        <p>Canada</p>
+    </div>
+    <div class="separation"></div>
+    <div class="info">
+        <a class="advertising" href="https://ads.google.com/intl/en_ca/home/?subid=ww-ww-et-g-awa-a-g_hpafoot1_1!o2m--ahpm-0000000066-0000000001&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpafooter&fg=1">Advertising</a>
+        <a class="business" href="https://smallbusiness.withgoogle.com/intl/en_ca/help/#!/">Business</a>
+        <a class="hsw" href="https://www.google.com/search/howsearchworks/?fg=1">How Search works</a>
+        <a class="privacy" href="https://policies.google.com/privacy?hl=en-CA&fg=1">Privacy</a>
+        <a class="terms" href="https://policies.google.com/terms?hl=en-CA&fg=1">Terms</a>
+        <a class="settings" href="">Settings</a>
+    </div>
 </footer>
 </html>
