1st version done

--- a/index.html
+++ b/index.html
@@ -51,7 +51,11 @@
         height: 35px;
         top: 20px;
         left: 1340px;
-        border-radius: 10%;
+        border-radius: 6%;
+    }
+    .signin_button:hover {
+        cursor: pointer;
+        background-color: rgb(46, 142, 231);
     }
     .app_icon{
         position: absolute;
